--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "intl": "^1.2.5",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-day-picker": "^9.2.1",
